Add homepage with list of categories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 server.port = 8080
 server.host = localhost
+
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/studydesk
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# values removed for security reasons
+spring.datasource.username=
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.show-sql=true
